--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,6 +56,7 @@
   </div>
   <script src="{{ '/assets/js/scale.fix.js' | relative_url }}"></script>
   <script src="{{ '/assets/js/admonitions_fix.js' | relative_url }}"></script>
+  <script src="{{ '/assets/js/custom_admonitions.js' | relative_url }}"></script>
 
 </body>
 
