--- a/_sass/admonitions.scss
+++ b/_sass/admonitions.scss
@@ -6,7 +6,6 @@
     font-style: normal;
 }
 
-
 .admonition-note {
     border-left: 4px solid #1e90ff;
     background-color: #f0f8ff;
@@ -40,4 +39,10 @@
     background-color: #fff5e6;
     padding: 10px;
     margin: 1em 0;
+}
+
+p.admonition-abstract {
+    font-style: italic;
+    padding-right: 40px;
+    padding-left: 30px;
 }
