--- a/_sass/theme-minimal-adjustments.scss
+++ b/_sass/theme-minimal-adjustments.scss
@@ -1,4 +1,8 @@
 // Global settings for the body and typography
+mark {
+    background-color: hsl(220, 58%, 78%);
+}
+
 body {
     background-color: #fff;
     padding: 50px;
