--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,6 +58,7 @@
   <script src="{{ '/assets/js/admonitions_fix.js' | relative_url }}"></script>
   <script src="{{ '/assets/js/custom_admonitions.js' | relative_url }}"></script>
   <script src="{{ '/assets/js/codeblock_markings.js' | relative_url }}"></script>
+  <script src="{{ '/assets/js/link_fix.js' | relative_url }}"></script>
 
 
 </body>
