--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,6 +1,6 @@
 <nav class="sidebar-nav">
     <ul>
-        <li><a href="{{ '/' | relative_url }}">Documentation</a></li>
+        <li><a href="{{ '/documentation/' | relative_url }}">Documentation</a></li>
         <li><a href="{{ '/short/' | relative_url }}">In Short</a></li>
         <li><a href="{{ '/table/' | relative_url }}">Mapping Table</a></li>
         <li><a href="{{ '/examples/' | relative_url }}">Examples</a></li>
