--- a/_sass/table.scss
+++ b/_sass/table.scss
@@ -10,7 +10,7 @@ table {
         padding: 5px 10px;
         color: #434343;
         font-size: 10pt;
-        vertical-align: bottom;
+        vertical-align: middle;
         white-space: normal;
         overflow: hidden;
         word-wrap: break-word;
